# roman-numeral-converter-tdd

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
src/: RomanDigit.cpp  RomanDigit.h  RomanDigitConverter.cpp  RomanDigitConverter.h  RomanNumberConverter.cpp  RomanNumberConverter.h  RomanSegment.cpp  RomanSegment.h  main.cpp
test/: RomanDigitConverterTests.cpp  RomanDigitTests.cpp  RomanNumberConverterTests.cpp  RomanSegmentTests.cpp
